# aoc23

./: README.md  conftest.py  new_day.py  pyproject.toml  test_new_day.py
_test_data/: sample2023-02.html  sample2023-03.html  sample2023-04.html
d01/: __main__.py
d02/: __main__.py
d03/: __main__.py  sample2
d04/: __main__.py
d05/: __main__.py
d06/: __main__.py
d07/: __init__.py  __main__.py  test_d07.py
d08/: __main__.py
d09/: __main__.py
