[tool.poetry]
name = "aoc23"
version = "0.1.0"
description = ""
authors = ["Konstantin Spirin <konstmsu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
