[tool.poetry]
name = "aoc23"
version = "0.1.0"
description = ""
authors = ["Konstantin Spirin <konstmsu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
structlog = "^23.2.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-watch = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
